change input size

--- a/index.css
+++ b/index.css
@@ -71,6 +71,11 @@ html, body {
 .messages {
   width: 50%;
   margin: 0 auto;
+  padding: 3em
+}
+
+#userInput {
+  width: 90%
 }
 
 /* TODO: fix this styling for actual table elements!! */
