--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,75 +1,11 @@
-html, body {
-  margin: 0px;
-  padding: 0px;
-  height: 100%;
-  width: 100%;
-  font-family: "Montserrat", sans-serif;
-}
-
-.navbar .link {
-  display: block;
-  text-align: center;
-  padding: 1.5em 3em;
-  text-decoration: none;
-  /* background: #223047; */
-  color: #223047;
-}
-
-.navbar .link:hover,
-.navbar .link:active {
-  color: white;
-  background: #223047;
-}
-
-.navbar div {
-  display: none;
-}
-
-.navbar .toggle {
-  padding: 1em;
-  color: black;
-}
-
-@media (min-width: 48em) {
-  .navbar {
-      display: flex;
-  }
-
-  .navbar div {
-      display: flex;
-  }
-
-  .navbar .right {
-      display: flex;
-      flex: 1;
-  }
-
-  .navbar .link {
-      width: auto;
-  }
-
-  .navbar .right {
-      justify-content: flex-end;
-  }
-
-  .navbar .toggle {
-      display: none;
-  }
-}
-
-@media (max-width: 48em) {
-  .navbar.active .toggle {
-      background: #223047;
-      color: white;
-  }
-
-  .navbar.active div {
-      display: block;
-  }
+body {
+  background-image: url('../background.png');
+  background-repeat: no-repeat;
+  background-position: left bottom;
 }
 
 .messages {
-  width: 50%;
+  width: 70%;
   margin: 0 auto;
   padding: 1.5em
 }
@@ -80,13 +16,13 @@ html, body {
   font-size: 0.85em
 }
 
-#title {
+/* #title {
   text-align: center;
-}
+} */
 
-#title h1 {
+#title {
   font-size: 3em;
-  margin: 0
+  margin: 0 1.5em;
 }
 
 .showing {
@@ -103,11 +39,10 @@ html, body {
   transition: transform 350ms ease 0ms, opacity 400ms ease;
 }
 
-/* TODO: fix this styling for actual table elements!! */
 table {
   border-collapse: collapse;
   width: 100%;
-  display: block;
+  background-color: #ffffffb6;
 }
 
 td, th {
@@ -156,7 +91,7 @@ th.msg-cell{
 
 #all-messages-control {
   margin-bottom: 0;
-  padding-bottom: 0
+  padding: 0 1.4em;
 }
 
 #show-all {
@@ -242,4 +177,8 @@ th.msg-cell{
   display: flex;
   justify-content: flex-end;
   margin-top: 0.25em;
+}
+
+#all-messages{
+  padding-top: 0.5em
 }
