--- a/css/style.css
+++ b/css/style.css
@@ -6,64 +6,107 @@ html, body {
   font-family: "Montserrat", sans-serif;
 }
 
-.navbar .link {
-  display: block;
-  text-align: center;
-  padding: 1.5em 3em;
-  text-decoration: none;
-  /* background: #223047; */
-  color: #223047;
+nav {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: #223047;
 }
 
-.navbar .link:hover,
-.navbar .link:active {
+.title{
   color: white;
-  background: #223047;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  font-size: 1em;
 }
 
-.navbar div {
+.title h2 {
+  margin: 0.4em
+}
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 25%
+}
+
+.nav-links a {
+  color: white;
+  text-decoration: none;
+  letter-spacing: 0.2em
+}
+
+.nav-links li {
+  list-style: none;
+}
+
+.burger {
+  display: none;
+  cursor: pointer;
+}
+
+.burger div{
+  width: 1.5em;
+  height: 0.1875em;
+  background-color: white;
+  margin: 0.3em;
+  transition: all 0.3s ease
+}
+
+@media screen and (max-width: 48em) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-links {
+    position: absolute;
+    right: 0em;
+    height: 92vh;
+    top: 8vh;
+    background-color: #223047;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 2;
+    width: 40%;
+    transform: translateX(100%);
+    transition: transform 0.4s ease-in;
+    margin: 0
+  }
+
+  .nav-links li {
+    opacity: 0;
+  }
+
+  .burger {
+    display: block
+  }
+}
+
+.nav-active {
+  transform: translateX(0%);
+}
+
+@keyframes navLinkFade{
+  from{
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to{
+    opacity: 1;
+    transform: translateX(0px);
+  }
+} 
+
+.active .line1 {
+  transform: rotate(-45deg) translate(-3px,3px);
+}
+
+.active .line2 {
   display: none;
 }
 
-.navbar .toggle {
-  padding: 0.5em;
-  color: black;
-}
-
-@media (min-width: 48em) {
-  .navbar {
-      display: flex;
-  }
-
-  .navbar div {
-      display: flex;
-  }
-
-  .navbar .right {
-      display: flex;
-      flex: 1;
-  }
-
-  .navbar .link {
-      width: auto;
-  }
-
-  .navbar .right {
-      justify-content: center;
-  }
-
-  .navbar .toggle {
-      display: none;
-  }
-}
-
-@media (max-width: 48em) {
-  .navbar.active .toggle {
-      background: #223047;
-      color: white;
-  }
-
-  .navbar.active div {
-      display: block;
-  }
+.active .line3 {
+  transform: rotate(45deg) translate(-3px,-2px);
 }
