--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('../background.png');
+  background-image: url('../img/background.png');
   background-repeat: no-repeat;
   background-position: left bottom;
 }
