--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@ nav {
   transition: all 0.3s ease
 }
 
+@media screen and (max-width: 71em) {
+  .nav-links {
+    width: 35%
+  }
+}
+
 @media screen and (max-width: 48em) {
   body {
     overflow-x: hidden;
