--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,8 +13,7 @@
 form {
   width: 80%;
   margin: 0 auto;
-  margin-top: 8px;
-  margin-bottom: 8px;
+  padding: 1em 0;
   text-align: left;
 }
 
@@ -32,24 +31,46 @@ form label {
   font-size: 12px;
 }
 
-input[type=submit] {
-  width: 49%;
-  background-color: #4CAF50;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 5px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.form-btn {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 0.75em;
 }
 
-input[type=reset] {
-  width: 49%;
-  background-color: #E15554;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 5px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+#btn-save {
+  background-color:#74ad5a;
+	border-radius:1.6em;
+	border:0.06em solid #3b6e22;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size: 0.65em;
+	padding: 0.5em 0.9em;
+	text-decoration:none;
+  text-shadow:0em 0.06em 0em #92b879;
+  outline: none;
+  margin: 0 0.5em;
+}
+
+#btn-save:hover {
+  background-color:#68a54b;
+}
+
+#btn-clear {
+  background-color:#bd5f5f;
+	border-radius:1.6em;
+	border:0.06em solid #6e2222;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-size: 0.65em;
+	padding: 0.5em 0.9em;
+	text-decoration:none;
+  text-shadow:0em 0.06em 0em #b87979;
+  outline: none;
+  margin: 0 0.5em;
+}
+
+#btn-clear:hover {
+  background-color:#a54b4b;
 }
