--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,7 +7,6 @@
   border-radius: 5px;
   width: 80%;
   margin: 0 auto;
-  /* min-height: 50px */
 }
 
 form {
@@ -78,7 +77,7 @@ form label {
 }
 
 .list-options {
-  border-bottom: 0.05em solid rgb(77, 77, 77);
+  border-bottom: 0.05em solid #223047;
   width: 80%;
   margin: 0 auto;
   margin-bottom: 0.75em;
