--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -203,3 +203,35 @@ button {
   width: 25%;
   padding: 0 8px;
 }
+
+.details-modal {
+  border: 1px solid black;
+  z-index: 1;
+  width: 50%;
+  margin: 0 auto;
+  padding: 8px;
+  color: black;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  border-radius: 5px;
+  background: white;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 0) !important;
+}
+
+.close-modal-btn {
+  background: none;
+  border: 0;
+  color: rgb(151, 0, 0);
+  font-size: 1.5em;
+  width: 1.5em;
+  height: 1.5em;
+  padding: 0;
+  float: right;
+}
+
+.close-modal-btn:hover {
+  background-color: rgb(110, 0, 0);
+  color: white;
+}
