--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -217,7 +217,7 @@ button {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 0) !important;
+  transform: translate(-50%, -50%) !important;
 }
 
 .close-modal-btn {
@@ -234,4 +234,28 @@ button {
 .close-modal-btn:hover {
   background-color: rgb(110, 0, 0);
   color: white;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #223047;
+  padding: 0.2em;
+  align-items: center
+}
+
+.modal-header h2 {
+  margin: 0;
+  font-size: 1.5em;
+  color: #223047
+}
+
+.modal {
+  backdrop-filter: grayscale(0.5) opacity(0.8) blur(4px);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width:100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
 }
