--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -231,7 +231,7 @@ button {
   float: right;
 }
 
-.close-modal-btn:hover {
+.close-modal-btn:hover, .delete-item-btn:hover {
   background-color: rgb(110, 0, 0);
   color: white;
 }
@@ -258,4 +258,23 @@ button {
   width:100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
+}
+
+.modal-content {
+  width: 75%;
+  margin: 0 auto;
+}
+
+.modal-content-label {
+  font-size: 0.7em;
+  text-align: left;
+  border-top: 1px dashed #223047;
+}
+
+.delete-item-btn {
+background-color: rgb(151, 0, 0);
+border: none;
+color: white;
+padding: 0.9em 1.2em;
+font-size: 0.6em;
 }
