--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -45,13 +45,12 @@
 }
 
 .modal {
-    backdrop-filter: grayscale(0.5) opacity(0.8) blur(4px);
+    backdrop-filter: grayscale(0.5) opacity(0.8) blur(0.1em);
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.6);
 }
 
 .modal-content {
