--- a/src/styles/InputForm.css
+++ b/src/styles/InputForm.css
@@ -68,3 +68,12 @@ form label {
     width: 25%;
     padding: 0 8px;
 }
+
+input[type=radio] {
+    display: none;
+}
+
+.star {
+    cursor: pointer;
+    transition: color 200ms;
+}
