--- a/src/styles/Details.css
+++ b/src/styles/Details.css
@@ -77,3 +77,23 @@
     font-size: 0.6em;
     margin-bottom: 0.9em
 }
+
+.modal-rating-category {
+    display: flex;
+    justify-content: space-between
+}
+
+.modal-category {
+    width: 50%;
+    padding-right: 8px;
+}
+
+.modal-rating {
+    width: 50%;
+    padding-left: 8px;
+}
+
+.rating-view {
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+}
