--- a/client/src/styles/LoadingSpinner.css
+++ b/client/src/styles/LoadingSpinner.css
@@ -9,9 +9,9 @@
   margin-top: -30px;
   margin-left: -30px;
   border-radius: 50%;
-  border: 3px solid lightgray;
-  border-top-color: #223047;
-  animation: spinner 0.7s linear infinite;
+  border-top: 3px solid #223047;
+  border-right: 3px solid transparent;
+  animation: spinner 0.5s linear infinite;
 }
 
 @keyframes spinner {
