--- a/client/src/styles/Details.css
+++ b/client/src/styles/Details.css
@@ -56,6 +56,8 @@
 .modal-content {
     width: 75%;
     margin: 0 auto;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .modal-content p {
@@ -71,6 +73,15 @@
 
 .delete-item-btn {
     background-color: rgb(151, 0, 0);
+    border: none;
+    color: white;
+    padding: 0.9em 1.2em;
+    font-size: 0.6em;
+    margin-bottom: 0.9em
+}
+
+.edit-item-btn {
+    background-color: #223047;
     border: none;
     color: white;
     padding: 0.9em 1.2em;
@@ -96,4 +107,12 @@
 .rating-view {
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+}
+
+.btn-container {
+    width: 75%;    
+    margin: 0 auto;
+    margin-top: 0.8em;
+    display: flex;
+    justify-content: space-between;
 }
