--- a/client/src/styles/Snackbar.css
+++ b/client/src/styles/Snackbar.css
@@ -3,7 +3,7 @@
   visibility: hidden; 
   min-width: 250px; 
   margin-left: -125px; 
-  background-color: #4caf50; 
+  /* background-color: #4caf50;  */
   color: #fff; 
   text-align: center; 
   border-radius: 2px; 
@@ -18,6 +18,14 @@
   visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+
+#snackbar.success {
+  background-color: #4caf50;
+}
+
+#snackbar.error {
+  background-color: #f44336;
 }
 
 /* Animations to fade the snackbar in and out */
